[gd_scene load_steps=40 format=4 uid="uid://b7abyjoywj2xi"]

[ext_resource type="Texture2D" uid="uid://bx6e0ohnt0shd" path="res://assets/tiles.png" id="1_ex228"]
[ext_resource type="Script" path="res://resources/scripts/World.gd" id="1_ta3c1"]
[ext_resource type="PackedScene" uid="uid://dm61kxy6oa6ig" path="res://resources/scenes/snowman_tile.tscn" id="2_mm62g"]
[ext_resource type="FontFile" uid="uid://dcy4tcp1un3hm" path="res://assets/VCR_OSD_MONO_1.001.ttf" id="2_xfbyn"]
[ext_resource type="PackedScene" uid="uid://spagfytaaui1" path="res://resources/scenes/player.tscn" id="3_435f8"]
[ext_resource type="PackedScene" uid="uid://n1k16j01esx1" path="res://resources/scenes/coin.tscn" id="5_p2qib"]
[ext_resource type="PackedScene" uid="uid://ducq0jguonwky" path="res://resources/scenes/options.tscn" id="7_dmf4e"]
[ext_resource type="Texture2D" uid="uid://dnfr0mndbxyp1" path="res://assets/backgrounds/backgroundColorFall.png" id="7_lpjx1"]
[ext_resource type="Theme" uid="uid://bur45gcdny8mk" path="res://resources/default.tres" id="7_pafxl"]
[ext_resource type="Script" path="res://resources/scripts/Camera.gd" id="7_qr1nt"]
[ext_resource type="PackedScene" uid="uid://doy1v1jerro7i" path="res://resources/scenes/leaderboard.tscn" id="8_01j2r"]
[ext_resource type="Texture2D" uid="uid://bvi5yf7ld2xp7" path="res://assets/backgrounds/backgroundColorForest.png" id="8_o23l3"]
[ext_resource type="Script" path="res://resources/scripts/Lava.gd" id="8_tkpfa"]
[ext_resource type="Shader" path="res://resources/lava.gdshader" id="8_vsu2s"]
[ext_resource type="Texture2D" uid="uid://bi8icbn358v4p" path="res://assets/destination.png" id="10_lxm8u"]
[ext_resource type="Texture2D" uid="uid://b4lchj0lge652" path="res://assets/backgrounds/backgroundForest.png" id="10_x3c8t"]
[ext_resource type="Texture2D" uid="uid://3n8414wjvhkb" path="res://assets/particles/trace_01.png" id="11_3b3vg"]
[ext_resource type="Texture2D" uid="uid://clu4xa2ymfhaw" path="res://assets/particles/star_01.png" id="12_7rbku"]

[sub_resource type="Environment" id="Environment_e0sfn"]
background_mode = 3
glow_enabled = true
glow_blend_mode = 1
glow_hdr_threshold = 0.7

[sub_resource type="LabelSettings" id="LabelSettings_f1h6l"]
font = ExtResource("2_xfbyn")
font_size = 32
font_color = Color(1, 0.498039, 0, 1)
outline_size = 5
outline_color = Color(0, 0, 0, 1)
shadow_size = 5
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_8u2kt"]
font = ExtResource("2_xfbyn")
font_size = 32
outline_size = 5
outline_color = Color(0, 0, 0, 1)
shadow_size = 5
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_fwlaf"]
font = ExtResource("2_xfbyn")
font_size = 32
font_color = Color(1, 0.498039, 1, 1)
outline_size = 5
outline_color = Color(0, 0, 0, 1)
shadow_size = 5
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_eqyxv"]
font = ExtResource("2_xfbyn")
font_size = 48
font_color = Color(1, 0, 0, 1)
outline_size = 5
outline_color = Color(0, 0, 0, 1)
shadow_size = 5
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_685a3"]
font = ExtResource("2_xfbyn")
outline_size = 5
outline_color = Color(0, 0, 0, 1)
shadow_size = 5
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_tmlcm"]
font = ExtResource("2_xfbyn")
font_size = 12
outline_size = 5
outline_color = Color(0, 0, 0, 1)
shadow_size = 5
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ma02g"]

[sub_resource type="Curve" id="Curve_7rghk"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 1.4, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_chva4"]
curve = SubResource("Curve_7rghk")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_krpny"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(256, 0, 0)
gravity = Vector3(0, -960, 0)
scale_min = 0.05
scale_max = 0.05
scale_curve = SubResource("CurveTexture_chva4")

[sub_resource type="Curve" id="Curve_4h6sh"]
_data = [Vector2(0, 0), 0.0, 1.98701, 0, 1, Vector2(0.503268, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -2.01316, 0.0, 1, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_pkum7"]
curve = SubResource("Curve_4h6sh")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4eysu"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(256, 350, 0)
angle_min = -720.0
angle_max = 720.0
angular_velocity_min = -45.0
angular_velocity_max = 45.0
radial_velocity_min = 50.0
radial_velocity_max = 50.0
gravity = Vector3(0, 0, 0)
scale_min = 0.05
scale_max = 0.05
scale_curve = SubResource("CurveTexture_pkum7")
hue_variation_min = -0.1
hue_variation_max = 0.1

[sub_resource type="LabelSettings" id="LabelSettings_ax2yi"]
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_fxred"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_q5ye0"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jg0ob"]
texture = ExtResource("1_ex228")
texture_region_size = Vector2i(18, 18)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:0/0/physics_layer_0/polygon_0/one_way = true
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0/physics_layer_0/polygon_0/one_way = true
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0/physics_layer_0/polygon_0/one_way = true
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0/physics_layer_0/polygon_0/one_way = true
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0/physics_layer_0/polygon_0/one_way = true
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0/physics_layer_0/polygon_0/one_way = true
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0/physics_layer_0/polygon_0/one_way = true
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0/physics_layer_0/polygon_0/one_way = true
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0/physics_layer_0/polygon_0/one_way = true
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0/physics_layer_0/polygon_0/one_way = true
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0/physics_layer_0/polygon_0/one_way = true
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0/physics_layer_0/polygon_0/one_way = true
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:2/0 = 0
9:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:2/0 = 0
10:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:3/0/physics_layer_0/polygon_0/one_way = true
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0/physics_layer_0/polygon_0/one_way = true
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0/physics_layer_0/polygon_0/one_way = true
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0/physics_layer_0/polygon_0/one_way = true
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:4/0/physics_layer_0/polygon_0/one_way = true
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0/physics_layer_0/polygon_0/one_way = true
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0/physics_layer_0/polygon_0/one_way = true
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:4/0/physics_layer_0/polygon_0/one_way = true
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:5/0/physics_layer_0/polygon_0/one_way = true
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:5/0/physics_layer_0/polygon_0/one_way = true
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:5/0/physics_layer_0/polygon_0/one_way = true
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:5/0/physics_layer_0/polygon_0/one_way = true
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
0:6/0 = 0
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:6/0 = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:6/0 = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
0:7/0 = 0
0:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:7/0 = 0
1:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:7/0 = 0
2:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:7/0 = 0
3:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
11:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:7/0/physics_layer_0/polygon_0/one_way = true
12:7/0 = 0
12:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:7/0/physics_layer_0/polygon_0/one_way = true
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0

[sub_resource type="TileSet" id="TileSet_e2c6y"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_jg0ob")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sama4"]
size = Vector2(516, 36)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3bhe7"]
shader = ExtResource("8_vsu2s")
shader_parameter/color1 = Color(2, 1.5, 0, 1)
shader_parameter/color2 = Color(0.5, 0, 0, 1)
shader_parameter/wave_speed = 10.0

[node name="World" type="Node2D"]
script = ExtResource("1_ta3c1")
snowman_tile = ExtResource("2_mm62g")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_e0sfn")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Score" type="Label" parent="UI"]
offset_right = 512.0
offset_bottom = 29.0
text = "1234567890"
label_settings = SubResource("LabelSettings_f1h6l")
horizontal_alignment = 2

[node name="Subtitle" type="Label" parent="UI"]
offset_top = 30.0
offset_right = 512.0
offset_bottom = 74.0
text = "Spaaaace!!!!!!!"
label_settings = SubResource("LabelSettings_8u2kt")
horizontal_alignment = 1
visible_characters = 0
visible_ratio = 0.0

[node name="Speed" type="Label" parent="UI"]
visible = false
offset_left = 10.0
offset_top = 30.0
offset_right = 66.0
offset_bottom = 59.0
text = "0.0"
label_settings = SubResource("LabelSettings_fwlaf")

[node name="ParallaxBackground" type="ParallaxBackground" parent="UI"]

[node name="BackgroundColorFall" type="Sprite2D" parent="UI/ParallaxBackground"]
visible = false
position = Vector2(256, 320)
texture = ExtResource("7_lpjx1")

[node name="BackgroundColorForest" type="Sprite2D" parent="UI/ParallaxBackground"]
position = Vector2(256, 320)
texture = ExtResource("8_o23l3")

[node name="BackgroundForest" type="Sprite2D" parent="UI/ParallaxBackground"]
visible = false
position = Vector2(256, 320)
texture = ExtResource("10_x3c8t")

[node name="Health" type="Node2D" parent="UI"]
visible = false
position = Vector2(18, 18)
scale = Vector2(2, 2)

[node name="1" type="Sprite2D" parent="UI/Health"]
texture_filter = 1
position = Vector2(0, 0.5)
texture = ExtResource("1_ex228")
region_enabled = true
region_rect = Rect2(72, 36, 18, 18)

[node name="2" type="Sprite2D" parent="UI/Health"]
texture_filter = 1
position = Vector2(18, 0)
texture = ExtResource("1_ex228")
region_enabled = true
region_rect = Rect2(72, 36, 18, 18)

[node name="3" type="Sprite2D" parent="UI/Health"]
texture_filter = 1
position = Vector2(36, 0)
texture = ExtResource("1_ex228")
region_enabled = true
region_rect = Rect2(72, 36, 18, 18)

[node name="DeadMenu" type="Node2D" parent="UI"]
visible = false

[node name="ColorRect" type="ColorRect" parent="UI/DeadMenu"]
offset_right = 512.0
offset_bottom = 644.0
color = Color(1, 0, 0, 0.5)

[node name="Label" type="Label" parent="UI/DeadMenu"]
offset_top = 96.0
offset_right = 512.0
offset_bottom = 139.0
text = "You Died!"
label_settings = SubResource("LabelSettings_eqyxv")
horizontal_alignment = 1

[node name="SplashLabel" type="Label" parent="UI/DeadMenu"]
offset_top = 124.0
offset_right = 512.0
offset_bottom = 182.0
text = "😀😀😀hello :3 polygon do nat"
label_settings = SubResource("LabelSettings_685a3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Stats" type="Label" parent="UI/DeadMenu"]
offset_left = -1.0
offset_top = 165.0
offset_right = 511.0
offset_bottom = 250.0
text = "Your score is %score%
You collected %coins% coin(s)
You lived for %time%
You killed %snowmen% snowmen"
label_settings = SubResource("LabelSettings_tmlcm")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Leaderboard" parent="UI/DeadMenu" instance=ExtResource("8_01j2r")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_top = 250.0
offset_bottom = 250.0
grow_horizontal = 1
grow_vertical = 1

[node name="Button" type="Button" parent="UI/DeadMenu"]
offset_left = 91.0
offset_top = 56.0
offset_right = 401.0
offset_bottom = 96.0
theme = ExtResource("7_pafxl")
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_xfbyn")
theme_override_font_sizes/font_size = 36
theme_override_styles/focus = SubResource("StyleBoxEmpty_ma02g")
text = "Retry"

[node name="Button2" type="Button" parent="UI/DeadMenu"]
offset_left = 91.0
offset_top = 1.0
offset_right = 401.0
offset_bottom = 41.0
theme = ExtResource("7_pafxl")
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_xfbyn")
theme_override_font_sizes/font_size = 36
theme_override_styles/focus = SubResource("StyleBoxEmpty_ma02g")
text = "Main Menu"

[node name="PauseMenu" type="Node2D" parent="UI"]
visible = false

[node name="ColorRect" type="ColorRect" parent="UI/PauseMenu"]
offset_right = 512.0
offset_bottom = 640.0
color = Color(0, 0, 0, 0.5)

[node name="Options" parent="UI/PauseMenu" instance=ExtResource("7_dmf4e")]

[node name="Destination" type="Sprite2D" parent="UI"]
visible = false
position = Vector2(247, 50)
scale = Vector2(1.40625, 1.40625)
texture = ExtResource("10_lxm8u")

[node name="GPUParticles2D" type="GPUParticles2D" parent="UI"]
position = Vector2(256, 660)
amount = 256
process_material = SubResource("ParticleProcessMaterial_krpny")
texture = ExtResource("11_3b3vg")
lifetime = 1.15
fixed_fps = 60

[node name="Stars" type="GPUParticles2D" parent="UI"]
position = Vector2(256, 330)
emitting = false
amount = 256
process_material = SubResource("ParticleProcessMaterial_4eysu")
texture = ExtResource("12_7rbku")
lifetime = 5.0
fixed_fps = 60

[node name="FadeLayer" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="FadeLayer"]
offset_right = 512.0
offset_bottom = 640.0
color = Color(0, 0, 0, 0)

[node name="ThankYou" type="Label" parent="FadeLayer"]
modulate = Color(1, 1, 1, 0)
offset_top = 22.0
offset_right = 512.0
offset_bottom = 640.0
text = "Thank you for playing"
label_settings = SubResource("LabelSettings_ax2yi")
horizontal_alignment = 1

[node name="Label" type="Label" parent="FadeLayer/ThankYou"]
layout_mode = 0
offset_top = 81.0
offset_right = 512.0
offset_bottom = 618.0
text = "This was made in 2 days for the ScoreSpace GameJam.

Special thanks to:
- Kenney from kenney.nl, without him this wouldn't exist.
- The amazing people at Godot
and you, for playing :)"
label_settings = SubResource("LabelSettings_fxred")
horizontal_alignment = 1
autowrap_mode = 2

[node name="Label2" type="Label" parent="FadeLayer/ThankYou"]
visible = false
layout_mode = 0
offset_top = 565.0
offset_right = 512.0
offset_bottom = 614.0
text = "thank you gorillagamer69 for ultrakill <3"
label_settings = SubResource("LabelSettings_q5ye0")
horizontal_alignment = 1
autowrap_mode = 2

[node name="Play" type="Button" parent="FadeLayer/ThankYou"]
layout_mode = 0
offset_top = 515.0
offset_right = 512.0
offset_bottom = 565.0
theme = ExtResource("7_pafxl")
disabled = true
text = "Main Menu"

[node name="TileMapLayer" type="TileMapLayer" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
tile_map_data = PackedByteArray("AAAAABMAAAABAAIAAAABABMAAAACAAIAAAACABMAAAACAAIAAAADABMAAAACAAIAAAAEABMAAAACAAIAAAAFABMAAAACAAIAAAAGABMAAAACAAIAAAAHABMAAAACAAIAAAAIABMAAAACAAIAAAAJABMAAAACAAIAAAAKABMAAAACAAIAAAALABMAAAACAAIAAAAMABMAAAACAAIAAAANABMAAAACAAIAAAAOABMAAAACAAIAAAAPABMAAAADAAIAAAA=")
tile_set = SubResource("TileSet_e2c6y")

[node name="Coins" type="Node" parent="."]

[node name="CoinTemplate" parent="Coins" instance=ExtResource("5_p2qib")]
process_mode = 4
visible = false
position = Vector2(401, 123)

[node name="JumpPads" type="Node" parent="."]

[node name="Props" type="Node" parent="."]

[node name="Player" parent="." instance=ExtResource("3_435f8")]

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(256, 320)
zoom = Vector2(0.95, 0.95)
position_smoothing_enabled = true
position_smoothing_speed = 8.0
drag_vertical_enabled = true
script = ExtResource("7_qr1nt")

[node name="GenerationPointTemplate" type="Area2D" parent="."]
visible = false
position = Vector2(0, 604)

[node name="ColorRect" type="ColorRect" parent="GenerationPointTemplate"]
visible = false
offset_right = 516.0
offset_bottom = 36.0
color = Color(0, 0.788235, 1, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="GenerationPointTemplate"]
visible = false
position = Vector2(256, 18)
shape = SubResource("RectangleShape2D_sama4")

[node name="Lava" type="Area2D" parent="."]
z_index = 2
position = Vector2(0, 642)
script = ExtResource("8_tkpfa")
speed_multiplier = 4.0

[node name="ColorRect" type="ColorRect" parent="Lava"]
material = SubResource("ShaderMaterial_3bhe7")
offset_right = 516.0
offset_bottom = 652.0
metadata/_edit_use_anchors_ = true

[node name="ColorRect2" type="ColorRect" parent="Lava"]
offset_right = 516.0
offset_bottom = 2.0
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lava"]
visible = false
position = Vector2(256, 18)
shape = SubResource("RectangleShape2D_sama4")

[connection signal="pressed" from="UI/DeadMenu/Button" to="." method="on_retry"]
[connection signal="pressed" from="UI/DeadMenu/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="FadeLayer/ThankYou/Play" to="." method="_on_play_pressed"]
[connection signal="area_entered" from="Coins/CoinTemplate" to="Player" method="on_collect_coin"]
[connection signal="area_entered" from="Lava" to="Lava" method="_on_area_entered"]
